@@ -4,6 +4,7 @@
 
 package io.modelcontextprotocol.spec;
 
+import java.util.Collections;
 import java.util.List;
 
 import io.modelcontextprotocol.spec.McpSchema.JSONRPCMessage;
@@ -80,7 +81,7 @@ public interface McpTransport {
 	<T> T unmarshalFrom(Object data, TypeRef<T> typeRef);
 
 	default List<String> protocolVersions() {
-		return List.of(ProtocolVersions.MCP_2024_11_05);
+		return Collections.singletonList(ProtocolVersions.MCP_2024_11_05);
 	}
 
 }
