@@ -45,7 +45,7 @@ class LifecycleInitializerPostInitializationHookTests {
 
 	private static final McpSchema.Implementation CLIENT_INFO = new McpSchema.Implementation("test-client", "1.0.0");
 
-	private static final List<String> PROTOCOL_VERSIONS = List.of("1.0.0", "2.0.0");
+	private static final List<String> PROTOCOL_VERSIONS = java.util.Arrays.asList("1.0.0", "2.0.0");
 
 	private static final McpSchema.InitializeResult MOCK_INIT_RESULT = new McpSchema.InitializeResult("2.0.0",
 			McpSchema.ServerCapabilities.builder().build(), new McpSchema.Implementation("test-server", "1.0.0"),
