@@ -4,6 +4,9 @@
 
 package io.modelcontextprotocol.client;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -41,8 +44,21 @@ class McpAsyncClientTests {
 	private McpClientTransport createMockTransportForToolValidation(boolean hasOutputSchema, boolean invalidOutput) {
 
 		// Create tool with or without output schema
-		Map<String, Object> inputSchemaMap = Map.of("type", "object", "properties",
-				Map.of("expression", Map.of("type", "string")), "required", List.of("expression"));
+
+		Map<String, Object> inputSchemaMap = new HashMap<>();
+		inputSchemaMap.put("type", "object");
+
+		// Proprietà interne
+		Map<String, Object> propertiesMap = new HashMap<>();
+		Map<String, String> expressionMap = new HashMap<>();
+		expressionMap.put("type", "string");
+		propertiesMap.put("expression", expressionMap);
+
+		inputSchemaMap.put("properties", propertiesMap);
+
+		// Lista "required"
+		List<String> requiredList = Collections.singletonList("expression");
+		inputSchemaMap.put("required", requiredList);
 
 		McpSchema.JsonSchema inputSchema = new McpSchema.JsonSchema("object", inputSchemaMap, null, null, null, null);
 		McpSchema.Tool.Builder toolBuilder = McpSchema.Tool.builder()
@@ -51,18 +67,46 @@ class McpAsyncClientTests {
 			.inputSchema(inputSchema);
 
 		if (hasOutputSchema) {
-			Map<String, Object> outputSchema = Map.of("type", "object", "properties",
-					Map.of("result", Map.of("type", "number"), "operation", Map.of("type", "string")), "required",
-					List.of("result", "operation"));
+			Map<String, Object> outputSchema = new HashMap<>();
+
+			// Proprietà interne
+			Map<String, Object> propertiesMap2 = new HashMap<>();
+			Map<String, String> resultMap = new HashMap<>();
+			resultMap.put("type", "number");
+
+			Map<String, String> operationMap = new HashMap<>();
+			operationMap.put("type", "string");
+
+			propertiesMap2.put("result", resultMap);
+			propertiesMap2.put("operation", operationMap);
+
+			outputSchema.put("type", "object");
+			outputSchema.put("properties", propertiesMap2);
+
+			// Lista required
+			List<String> requiredList2 = Arrays.asList("result", "operation");
+			outputSchema.put("required", requiredList2);
+
 			toolBuilder.outputSchema(outputSchema);
 		}
 
 		McpSchema.Tool calculatorTool = toolBuilder.build();
-		McpSchema.ListToolsResult mockToolsResult = new McpSchema.ListToolsResult(List.of(calculatorTool), null);
+		McpSchema.ListToolsResult mockToolsResult = new McpSchema.ListToolsResult(
+				Collections.singletonList(calculatorTool), null);
 
 		// Create call tool result - valid or invalid based on parameter
-		Map<String, Object> structuredContent = invalidOutput ? Map.of("result", "5", "operation", "add")
-				: Map.of("result", 5, "operation", "add");
+
+		Map<String, Object> structuredContent;
+		if (invalidOutput) {
+			structuredContent = new HashMap<>();
+			structuredContent.put("result", "5");
+			structuredContent.put("operation", "add");
+		}
+		else {
+			structuredContent = new HashMap<>();
+			structuredContent.put("result", 5);
+			structuredContent.put("operation", "add");
+		}
 
 		McpSchema.CallToolResult mockCallToolResult = McpSchema.CallToolResult.builder()
 			.addTextContent("Calculation result")
@@ -86,9 +130,11 @@ class McpAsyncClientTests {
 
 			@Override
 			public Mono<Void> sendMessage(McpSchema.JSONRPCMessage message) {
-				if (!(message instanceof McpSchema.JSONRPCRequest request)) {
+				if (!(message instanceof McpSchema.JSONRPCRequest)) {
 					return Mono.empty();
 				}
+
+				McpSchema.JSONRPCRequest request = (McpSchema.JSONRPCRequest) message;
 
 				McpSchema.JSONRPCResponse response;
 				if (McpSchema.METHOD_INITIALIZE.equals(request.method())) {
@@ -112,7 +158,7 @@ class McpAsyncClientTests {
 
 			@Override
 			public <T> T unmarshalFrom(Object data, TypeRef<T> typeRef) {
-				return JSON_MAPPER.convertValue(data, new TypeRef<>() {
+				return JSON_MAPPER.convertValue(data, new TypeRef<T>() {
 					@Override
 					public java.lang.reflect.Type getType() {
 						return typeRef.getType();
@@ -163,7 +209,7 @@ class McpAsyncClientTests {
 
 			@Override
 			public <T> T unmarshalFrom(Object data, TypeRef<T> typeRef) {
-				return JSON_MAPPER.convertValue(data, new TypeRef<>() {
+				return JSON_MAPPER.convertValue(data, new TypeRef<T>() {
 					@Override
 					public java.lang.reflect.Type getType() {
 						return typeRef.getType();
@@ -186,13 +232,15 @@ class McpAsyncClientTests {
 
 		StepVerifier.create(client.initialize()).expectNextMatches(Objects::nonNull).verifyComplete();
 
-		StepVerifier.create(client.callTool(new McpSchema.CallToolRequest("calculator", Map.of("expression", "2 + 3"))))
+		StepVerifier
+			.create(client
+				.callTool(new McpSchema.CallToolRequest("calculator", Collections.singletonMap("expression", "2 + 3"))))
 			.expectNextMatches(response -> {
 				assertThat(response).isNotNull();
-				assertThat(response.isError()).isFalse();
-				assertThat(response.structuredContent()).isInstanceOf(Map.class);
-				assertThat((Map<?, ?>) response.structuredContent()).hasSize(2);
-				assertThat(response.content()).hasSize(1);
+				assertThat(response.getIsError()).isFalse();
+				assertThat(response.getStructuredContent()).isInstanceOf(Map.class);
+				assertThat((Map<?, ?>) response.getStructuredContent()).hasSize(2);
+				assertThat(response.getContent()).hasSize(1);
 				return true;
 			})
 			.verifyComplete();
@@ -208,13 +256,15 @@ class McpAsyncClientTests {
 
 		StepVerifier.create(client.initialize()).expectNextMatches(Objects::nonNull).verifyComplete();
 
-		StepVerifier.create(client.callTool(new McpSchema.CallToolRequest("calculator", Map.of("expression", "2 + 3"))))
+		StepVerifier
+			.create(client
+				.callTool(new McpSchema.CallToolRequest("calculator", Collections.singletonMap("expression", "2 + 3"))))
 			.expectNextMatches(response -> {
 				assertThat(response).isNotNull();
-				assertThat(response.isError()).isFalse();
-				assertThat(response.structuredContent()).isInstanceOf(Map.class);
-				assertThat((Map<?, ?>) response.structuredContent()).hasSize(2);
-				assertThat(response.content()).hasSize(1);
+				assertThat(response.getIsError()).isFalse();
+				assertThat(response.getStructuredContent()).isInstanceOf(Map.class);
+				assertThat((Map<?, ?>) response.getStructuredContent()).hasSize(2);
+				assertThat(response.getContent()).hasSize(1);
 				return true;
 			})
 			.verifyComplete();
@@ -230,7 +280,9 @@ class McpAsyncClientTests {
 
 		StepVerifier.create(client.initialize()).expectNextMatches(Objects::nonNull).verifyComplete();
 
-		StepVerifier.create(client.callTool(new McpSchema.CallToolRequest("calculator", Map.of("expression", "2 + 3"))))
+		StepVerifier
+			.create(client
+				.callTool(new McpSchema.CallToolRequest("calculator", Collections.singletonMap("expression", "2 + 3"))))
 			.expectErrorMatches(ex -> ex instanceof IllegalArgumentException
 					&& ex.getMessage().contains("Tool call result validation failed"))
 			.verify();
@@ -245,7 +297,8 @@ class McpAsyncClientTests {
 			.name("subtract")
 			.description("calculate subtract")
 			.build();
-		McpSchema.ListToolsResult mockToolsResult = new McpSchema.ListToolsResult(List.of(addTool, subtractTool), "");
+		McpSchema.ListToolsResult mockToolsResult = new McpSchema.ListToolsResult(Arrays.asList(addTool, subtractTool),
+				"");
 
 		McpClientTransport transport = new McpClientTransport() {
 			Function<Mono<McpSchema.JSONRPCMessage>, Mono<McpSchema.JSONRPCMessage>> handler;
@@ -266,9 +319,11 @@ class McpAsyncClientTests {
 
 			@Override
 			public Mono<Void> sendMessage(McpSchema.JSONRPCMessage message) {
-				if (!(message instanceof McpSchema.JSONRPCRequest request)) {
+				if (!(message instanceof McpSchema.JSONRPCRequest)) {
 					return Mono.empty();
 				}
+
+				McpSchema.JSONRPCRequest request = (McpSchema.JSONRPCRequest) message;
 
 				McpSchema.JSONRPCResponse response;
 				if (McpSchema.METHOD_INITIALIZE.equals(request.method())) {
@@ -288,13 +343,14 @@ class McpAsyncClientTests {
 
 			@Override
 			public <T> T unmarshalFrom(Object data, TypeRef<T> typeRef) {
-				return JSON_MAPPER.convertValue(data, new TypeRef<>() {
+				return JSON_MAPPER.convertValue(data, new TypeRef<T>() {
 					@Override
 					public java.lang.reflect.Type getType() {
 						return typeRef.getType();
 					}
 				});
 			}
+
 		};
 
 		McpAsyncClient client = McpClient.async(transport).enableCallToolSchemaCaching(true).build();
@@ -303,7 +359,7 @@ class McpAsyncClientTests {
 		McpSchema.ListToolsResult toolsResult = mono.block();
 		assertThat(toolsResult).isNotNull();
 
-		Set<String> names = toolsResult.tools().stream().map(McpSchema.Tool::name).collect(Collectors.toSet());
+		Set<String> names = toolsResult.getTools().stream().map(McpSchema.Tool::getName).collect(Collectors.toSet());
 		assertThat(names).containsExactlyInAnyOrder("subtract", "add");
 	}
 
