@@ -8,6 +8,7 @@ import org.junit.jupiter.api.Test;
 
 import java.net.URI;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -31,15 +32,15 @@ class UtilsTests {
 	@Test
 	void testCollectionIsEmpty() {
 		assertTrue(Utils.isEmpty((Collection<?>) null));
-		assertTrue(Utils.isEmpty(List.of()));
-		assertFalse(Utils.isEmpty(List.of("test")));
+		assertTrue(Utils.isEmpty(Collections.emptyList()));
+		assertFalse(Utils.isEmpty(Collections.singletonList("test")));
 	}
 
 	@Test
 	void testMapIsEmpty() {
 		assertTrue(Utils.isEmpty((Map<?, ?>) null));
-		assertTrue(Utils.isEmpty(Map.of()));
-		assertFalse(Utils.isEmpty(Map.of("key", "value")));
+		assertTrue(Utils.isEmpty(Collections.emptyMap()));
+		assertFalse(Utils.isEmpty(Collections.singletonMap("key", "value")));
 	}
 
 	@ParameterizedTest
