@@ -5,28 +5,41 @@
 package io.modelcontextprotocol;
 
 import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicReference;
 
 import io.modelcontextprotocol.client.McpClient;
+import io.modelcontextprotocol.client.McpClient.SyncSpec;
+import io.modelcontextprotocol.client.McpSyncClient;
 import io.modelcontextprotocol.server.McpServer.StatelessAsyncSpecification;
 import io.modelcontextprotocol.server.McpServer.StatelessSyncSpecification;
+import io.modelcontextprotocol.server.McpStatelessAsyncServer;
 import io.modelcontextprotocol.server.McpStatelessServerFeatures;
+import io.modelcontextprotocol.server.McpStatelessServerFeatures.SyncToolSpecification;
 import io.modelcontextprotocol.server.McpStatelessSyncServer;
+import io.modelcontextprotocol.server.McpSyncServer;
 import io.modelcontextprotocol.spec.McpError;
 import io.modelcontextprotocol.spec.McpSchema;
 import io.modelcontextprotocol.spec.McpSchema.CallToolResult;
 import io.modelcontextprotocol.spec.McpSchema.InitializeResult;
+import io.modelcontextprotocol.spec.McpSchema.ListToolsResult;
 import io.modelcontextprotocol.spec.McpSchema.ServerCapabilities;
 import io.modelcontextprotocol.spec.McpSchema.TextContent;
 import io.modelcontextprotocol.spec.McpSchema.Tool;
 import net.javacrumbs.jsonunit.core.Option;
+
+import org.apache.http.client.methods.CloseableHttpResponse;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
+import org.apache.http.util.EntityUtils;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -53,15 +66,16 @@ public abstract class AbstractStatelessIntegrationTests {
 	@MethodSource("clientsForTesting")
 	void simple(String clientType) {
 
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
-		var server = prepareAsyncServerBuilder().serverInfo("test-server", "1.0.0")
+		McpStatelessAsyncServer server = prepareAsyncServerBuilder().serverInfo("test-server", "1.0.0")
 			.requestTimeout(Duration.ofSeconds(1000))
 			.build();
 
 		try (
 				// Create client without sampling capabilities
-				var client = clientBuilder.clientInfo(new McpSchema.Implementation("Sample " + "client", "0.0.0"))
+				McpSyncClient client = clientBuilder
+					.clientInfo(new McpSchema.Implementation("Sample " + "client", "0.0.0"))
 					.requestTimeout(Duration.ofSeconds(1000))
 					.build()) {
 
@@ -80,23 +94,24 @@ public abstract class AbstractStatelessIntegrationTests {
 	@MethodSource("clientsForTesting")
 	void testToolCallSuccess(String clientType) {
 
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
-		var callResponse = new McpSchema.CallToolResult(List.of(new McpSchema.TextContent("CALL RESPONSE")), null);
+		CallToolResult callResponse = new McpSchema.CallToolResult(
+				Collections.singletonList(new McpSchema.TextContent("CALL RESPONSE")), null);
+
 		McpStatelessServerFeatures.SyncToolSpecification tool1 = McpStatelessServerFeatures.SyncToolSpecification
 			.builder()
 			.tool(Tool.builder().name("tool1").description("tool1 description").inputSchema(EMPTY_JSON_SCHEMA).build())
 			.callHandler((ctx, request) -> {
 
-				try {
-					HttpResponse<String> response = HttpClient.newHttpClient()
-						.send(HttpRequest.newBuilder()
-							.uri(URI.create(
-									"https://raw.githubusercontent.com/modelcontextprotocol/java-sdk/refs/heads/main/README.md"))
-							.GET()
-							.build(), HttpResponse.BodyHandlers.ofString());
-					String responseBody = response.body();
-					assertThat(responseBody).isNotBlank();
+				try (CloseableHttpClient httpClient = HttpClients.createDefault()) {
+					HttpGet httpGet = new HttpGet(
+							"https://raw.githubusercontent.com/modelcontextprotocol/java-sdk/refs/heads/main/README.md");
+
+					try (CloseableHttpResponse response = httpClient.execute(httpGet)) {
+						String responseBody = EntityUtils.toString(response.getEntity(), "UTF-8");
+						assertThat(responseBody).isNotBlank();
+					}
 				}
 				catch (Exception e) {
 					e.printStackTrace();
@@ -106,18 +121,20 @@ public abstract class AbstractStatelessIntegrationTests {
 			})
 			.build();
 
-		var mcpServer = prepareSyncServerBuilder().capabilities(ServerCapabilities.builder().tools(true).build())
+		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder()
+			.capabilities(ServerCapabilities.builder().tools(true).build())
 			.tools(tool1)
 			.build();
 
-		try (var mcpClient = clientBuilder.build()) {
+		try (McpSyncClient mcpClient = clientBuilder.build()) {
 
 			InitializeResult initResult = mcpClient.initialize();
 			assertThat(initResult).isNotNull();
 
-			assertThat(mcpClient.listTools().tools()).contains(tool1.tool());
+			assertThat(mcpClient.listTools().getTools()).contains(tool1.tool());
 
-			CallToolResult response = mcpClient.callTool(new McpSchema.CallToolRequest("tool1", Map.of()));
+			CallToolResult response = mcpClient
+				.callTool(new McpSchema.CallToolRequest("tool1", Collections.emptyMap()));
 
 			assertThat(response).isNotNull().isEqualTo(callResponse);
 		}
@@ -130,7 +147,7 @@ public abstract class AbstractStatelessIntegrationTests {
 	@MethodSource("clientsForTesting")
 	void testThrowingToolCallIsCaughtBeforeTimeout(String clientType) {
 
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
 		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder()
 			.capabilities(ServerCapabilities.builder().tools(true).build())
@@ -148,7 +165,7 @@ public abstract class AbstractStatelessIntegrationTests {
 				.build())
 			.build();
 
-		try (var mcpClient = clientBuilder.requestTimeout(Duration.ofMillis(6666)).build()) {
+		try (McpSyncClient mcpClient = clientBuilder.requestTimeout(Duration.ofMillis(6666)).build()) {
 			InitializeResult initResult = mcpClient.initialize();
 			assertThat(initResult).isNotNull();
 
@@ -156,7 +173,7 @@ public abstract class AbstractStatelessIntegrationTests {
 			// the offending tool
 			// instead of getting back a timeout.
 			assertThatExceptionOfType(McpError.class)
-				.isThrownBy(() -> mcpClient.callTool(new McpSchema.CallToolRequest("tool1", Map.of())))
+				.isThrownBy(() -> mcpClient.callTool(new McpSchema.CallToolRequest("tool1", Collections.emptyMap())))
 				.withMessageContaining("Timeout on blocking read");
 		}
 		finally {
@@ -168,48 +185,52 @@ public abstract class AbstractStatelessIntegrationTests {
 	@MethodSource("clientsForTesting")
 	void testToolListChangeHandlingSuccess(String clientType) {
 
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
-		var callResponse = new McpSchema.CallToolResult(List.of(new McpSchema.TextContent("CALL RESPONSE")), null);
+		CallToolResult callResponse = new McpSchema.CallToolResult(
+				Collections.singletonList(new McpSchema.TextContent("CALL RESPONSE")), null);
 		McpStatelessServerFeatures.SyncToolSpecification tool1 = McpStatelessServerFeatures.SyncToolSpecification
 			.builder()
 			.tool(Tool.builder().name("tool1").description("tool1 description").inputSchema(EMPTY_JSON_SCHEMA).build())
 			.callHandler((ctx, request) -> {
 				// perform a blocking call to a remote service
-				try {
-					HttpResponse<String> response = HttpClient.newHttpClient()
-						.send(HttpRequest.newBuilder()
-							.uri(URI.create(
-									"https://raw.githubusercontent.com/modelcontextprotocol/java-sdk/refs/heads/main/README.md"))
-							.GET()
-							.build(), HttpResponse.BodyHandlers.ofString());
-					String responseBody = response.body();
-					assertThat(responseBody).isNotBlank();
+
+				try (CloseableHttpClient httpClient = HttpClients.createDefault()) {
+					HttpGet httpGet = new HttpGet(
+							"https://raw.githubusercontent.com/modelcontextprotocol/java-sdk/refs/heads/main/README.md");
+
+					try (CloseableHttpResponse response = httpClient.execute(httpGet)) {
+						// Leggi il corpo come stringa (UTF-8)
+						String responseBody = EntityUtils.toString(response.getEntity(), StandardCharsets.UTF_8);
+						assertThat(responseBody).isNotBlank();
+					}
 				}
 				catch (Exception e) {
 					e.printStackTrace();
 				}
+
 				return callResponse;
 			})
 			.build();
 
 		AtomicReference<List<Tool>> rootsRef = new AtomicReference<>();
 
-		var mcpServer = prepareSyncServerBuilder().capabilities(ServerCapabilities.builder().tools(true).build())
+		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder()
+			.capabilities(ServerCapabilities.builder().tools(true).build())
 			.tools(tool1)
 			.build();
 
-		try (var mcpClient = clientBuilder.toolsChangeConsumer(toolsUpdate -> {
+		try (McpSyncClient mcpClient = clientBuilder.toolsChangeConsumer(toolsUpdate -> {
 			// perform a blocking call to a remote service
-			try {
-				HttpResponse<String> response = HttpClient.newHttpClient()
-					.send(HttpRequest.newBuilder()
-						.uri(URI.create(
-								"https://raw.githubusercontent.com/modelcontextprotocol/java-sdk/refs/heads/main/README.md"))
-						.GET()
-						.build(), HttpResponse.BodyHandlers.ofString());
-				String responseBody = response.body();
-				assertThat(responseBody).isNotBlank();
+			try (CloseableHttpClient httpClient = HttpClients.createDefault()) {
+				HttpGet httpGet = new HttpGet(
+						"https://raw.githubusercontent.com/modelcontextprotocol/java-sdk/refs/heads/main/README.md");
+
+				try (CloseableHttpResponse response = httpClient.execute(httpGet)) {
+					// Leggi il corpo come stringa (UTF-8)
+					String responseBody = EntityUtils.toString(response.getEntity(), StandardCharsets.UTF_8);
+					assertThat(responseBody).isNotBlank();
+				}
 			}
 			catch (Exception e) {
 				e.printStackTrace();
@@ -223,7 +244,7 @@ public abstract class AbstractStatelessIntegrationTests {
 
 			assertThat(rootsRef.get()).isNull();
 
-			assertThat(mcpClient.listTools().tools()).contains(tool1.tool());
+			assertThat(mcpClient.listTools().getTools()).contains(tool1.tool());
 
 			// Remove a tool
 			mcpServer.removeTool("tool1");
@@ -250,11 +271,11 @@ public abstract class AbstractStatelessIntegrationTests {
 	@MethodSource("clientsForTesting")
 	void testInitialize(String clientType) {
 
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
-		var mcpServer = prepareSyncServerBuilder().build();
+		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder().build();
 
-		try (var mcpClient = clientBuilder.build()) {
+		try (McpSyncClient mcpClient = clientBuilder.build()) {
 
 			InitializeResult initResult = mcpClient.initialize();
 			assertThat(initResult).isNotNull();
@@ -270,13 +291,18 @@ public abstract class AbstractStatelessIntegrationTests {
 	@ParameterizedTest(name = "{0} : {displayName} ")
 	@MethodSource("clientsForTesting")
 	void testStructuredOutputValidationSuccess(String clientType) {
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
 		// Create a tool with output schema
-		Map<String, Object> outputSchema = Map.of(
-				"type", "object", "properties", Map.of("result", Map.of("type", "number"), "operation",
-						Map.of("type", "string"), "timestamp", Map.of("type", "string")),
-				"required", List.of("result", "operation"));
+		Map<String, Object> properties = new HashMap<>();
+		properties.put("result", Collections.singletonMap("type", "number"));
+		properties.put("operation", Collections.singletonMap("type", "string"));
+		properties.put("timestamp", Collections.singletonMap("type", "string"));
+
+		Map<String, Object> outputSchema = new HashMap<>();
+		outputSchema.put("type", "object");
+		outputSchema.put("properties", properties);
+		outputSchema.put("required", Arrays.asList("result", "operation"));
 
 		Tool calculatorTool = Tool.builder()
 			.name("calculator")
@@ -288,54 +314,55 @@ public abstract class AbstractStatelessIntegrationTests {
 			.builder()
 			.tool(calculatorTool)
 			.callHandler((exchange, request) -> {
-				String expression = (String) request.arguments().getOrDefault("expression", "2 + 3");
+
+				String expression = (String) request.getArguments().getOrDefault("expression", "2 + 3");
 				double result = evaluateExpression(expression);
-				return CallToolResult.builder()
-					.structuredContent(
-							Map.of("result", result, "operation", expression, "timestamp", "2024-01-01T10:00:00Z"))
-					.build();
+				Map<String, Object> structuredContent = new HashMap<>();
+				structuredContent.put("result", result);
+				structuredContent.put("operation", expression);
+				structuredContent.put("timestamp", "2024-01-01T10:00:00Z");
+				return CallToolResult.builder().structuredContent(structuredContent).build();
 			})
 			.build();
 
-		var mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
+		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
 			.capabilities(ServerCapabilities.builder().tools(true).build())
 			.tools(tool)
 			.build();
 
-		try (var mcpClient = clientBuilder.build()) {
+		try (McpSyncClient mcpClient = clientBuilder.build()) {
 			InitializeResult initResult = mcpClient.initialize();
 			assertThat(initResult).isNotNull();
 
 			// Verify tool is listed with output schema
-			var toolsList = mcpClient.listTools();
-			assertThat(toolsList.tools()).hasSize(1);
-			assertThat(toolsList.tools().get(0).name()).isEqualTo("calculator");
+			ListToolsResult toolsList = mcpClient.listTools();
+			assertThat(toolsList.getTools()).hasSize(1);
+			assertThat(toolsList.getTools().get(0).getName()).isEqualTo("calculator");
 			// Note: outputSchema might be null in sync server, but validation still works
 
 			// Call tool with valid structured output
 			CallToolResult response = mcpClient
-				.callTool(new McpSchema.CallToolRequest("calculator", Map.of("expression", "2 + 3")));
+				.callTool(new McpSchema.CallToolRequest("calculator", Collections.singletonMap("expression", "2 + 3")));
 
 			assertThat(response).isNotNull();
-			assertThat(response.isError()).isFalse();
+			assertThat(response.getIsError()).isFalse();
 
 			// In WebMVC, structured content is returned properly
-			if (response.structuredContent() != null) {
-				assertThat((Map<String, Object>) response.structuredContent()).containsEntry("result", 5.0)
+			if (response.getStructuredContent() != null) {
+				assertThat((Map<String, Object>) response.getStructuredContent()).containsEntry("result", 5.0)
 					.containsEntry("operation", "2 + 3")
 					.containsEntry("timestamp", "2024-01-01T10:00:00Z");
 			}
 			else {
 				// Fallback to checking content if structured content is not available
-				assertThat(response.content()).isNotEmpty();
+				assertThat(response.getContent()).isNotEmpty();
 			}
 
-			assertThat(response.structuredContent()).isNotNull();
-			assertThatJson(response.structuredContent()).when(Option.IGNORING_ARRAY_ORDER)
+			assertThat(response.getStructuredContent()).isNotNull();
+			assertThatJson(response.getStructuredContent()).when(Option.IGNORING_ARRAY_ORDER)
 				.when(Option.IGNORING_EXTRA_ARRAY_ITEMS)
 				.isObject()
-				.isEqualTo(json("""
-						{"result":5.0,"operation":"2 + 3","timestamp":"2024-01-01T10:00:00Z"}"""));
+				.isEqualTo(json("{\"result\":5.0,\"operation\":\"2 + 3\",\"timestamp\":\"2024-01-01T10:00:00Z\"}"));
 		}
 		finally {
 			mcpServer.closeGracefully();
@@ -345,18 +372,21 @@ public abstract class AbstractStatelessIntegrationTests {
 	@ParameterizedTest(name = "{0} : {displayName} ")
 	@MethodSource("clientsForTesting")
 	void testStructuredOutputOfObjectArrayValidationSuccess(String clientType) {
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
 		// Create a tool with output schema that returns an array of objects
-		Map<String, Object> outputSchema = Map
-			.of( // @formatter:off
-			"type", "array",
-			"items", Map.of(
-				"type", "object",
-				"properties", Map.of(
-					"name", Map.of("type", "string"),
-					"age", Map.of("type", "number")),					
-				"required", List.of("name", "age"))); // @formatter:on
+		Map<String, Object> properties = new HashMap<>();
+		properties.put("name", Collections.singletonMap("type", "string"));
+		properties.put("age", Collections.singletonMap("type", "number"));
+
+		Map<String, Object> items = new HashMap<>();
+		items.put("type", "object");
+		items.put("properties", properties);
+		items.put("required", Arrays.asList("name", "age"));
+
+		Map<String, Object> outputSchema = new HashMap<>();
+		outputSchema.put("type", "array");
+		outputSchema.put("items", items);
 
 		Tool calculatorTool = Tool.builder()
 			.name("getMembers")
@@ -368,34 +398,45 @@ public abstract class AbstractStatelessIntegrationTests {
 			.builder()
 			.tool(calculatorTool)
 			.callHandler((exchange, request) -> {
-				return CallToolResult.builder()
-					.structuredContent(List.of(Map.of("name", "John", "age", 30), Map.of("name", "Peter", "age", 25)))
-					.build();
+
+				List<Map<String, Object>> people = Arrays.asList(new HashMap<String, Object>() {
+					{
+						put("name", "John");
+						put("age", 30);
+					}
+				}, new HashMap<String, Object>() {
+					{
+						put("name", "Peter");
+						put("age", 25);
+					}
+				});
+
+				return CallToolResult.builder().structuredContent(people).build();
 			})
 			.build();
 
-		var mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
+		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
 			.capabilities(ServerCapabilities.builder().tools(true).build())
 			.tools(tool)
 			.build();
 
-		try (var mcpClient = clientBuilder.build()) {
+		try (McpSyncClient mcpClient = clientBuilder.build()) {
 			assertThat(mcpClient.initialize()).isNotNull();
 
 			// Call tool with valid structured output of type array
-			CallToolResult response = mcpClient.callTool(new McpSchema.CallToolRequest("getMembers", Map.of()));
+			CallToolResult response = mcpClient
+				.callTool(new McpSchema.CallToolRequest("getMembers", Collections.emptyMap()));
 
 			assertThat(response).isNotNull();
-			assertThat(response.isError()).isFalse();
+			assertThat(response.getIsError()).isFalse();
 
-			assertThat(response.structuredContent()).isNotNull();
-			assertThatJson(response.structuredContent()).when(Option.IGNORING_ARRAY_ORDER)
+			assertThat(response.getStructuredContent()).isNotNull();
+			assertThatJson(response.getStructuredContent()).when(Option.IGNORING_ARRAY_ORDER)
 				.when(Option.IGNORING_EXTRA_ARRAY_ITEMS)
 				.isArray()
 				.hasSize(2)
-				.containsExactlyInAnyOrder(json("""
-						{"name":"John","age":30}"""), json("""
-						{"name":"Peter","age":25}"""));
+				.containsExactlyInAnyOrder(json("{\"name\":\"John\",\"age\":30}"),
+						json("{\"name\":\"Peter\",\"age\":25}"));
 		}
 		finally {
 			mcpServer.closeGracefully();
@@ -405,13 +446,18 @@ public abstract class AbstractStatelessIntegrationTests {
 	@ParameterizedTest(name = "{0} : {displayName} ")
 	@MethodSource("clientsForTesting")
 	void testStructuredOutputWithInHandlerError(String clientType) {
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
+		Map<String, Object> properties = new HashMap<>();
+		properties.put("result", Collections.singletonMap("type", "number"));
+		properties.put("operation", Collections.singletonMap("type", "string"));
+
+		Map<String, Object> outputSchema = new HashMap<>();
+		outputSchema.put("type", "object");
+		outputSchema.put("properties", properties);
+		outputSchema.put("timestamp", Collections.singletonMap("type", "string"));
+		outputSchema.put("type", Arrays.asList("result", "operation"));
 		// Create a tool with output schema
-		Map<String, Object> outputSchema = Map.of(
-				"type", "object", "properties", Map.of("result", Map.of("type", "number"), "operation",
-						Map.of("type", "string"), "timestamp", Map.of("type", "string")),
-				"required", List.of("result", "operation"));
 
 		Tool calculatorTool = Tool.builder()
 			.name("calculator")
@@ -425,35 +471,35 @@ public abstract class AbstractStatelessIntegrationTests {
 			.tool(calculatorTool)
 			.callHandler((exchange, request) -> CallToolResult.builder()
 				.isError(true)
-				.content(List.of(new TextContent("Error calling tool: Simulated in-handler error")))
+				.content(Collections.singletonList(new TextContent("Error calling tool: Simulated in-handler error")))
 				.build())
 			.build();
 
-		var mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
+		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
 			.capabilities(ServerCapabilities.builder().tools(true).build())
 			.tools(tool)
 			.build();
 
-		try (var mcpClient = clientBuilder.build()) {
+		try (McpSyncClient mcpClient = clientBuilder.build()) {
 			InitializeResult initResult = mcpClient.initialize();
 			assertThat(initResult).isNotNull();
 
 			// Verify tool is listed with output schema
-			var toolsList = mcpClient.listTools();
-			assertThat(toolsList.tools()).hasSize(1);
-			assertThat(toolsList.tools().get(0).name()).isEqualTo("calculator");
+			ListToolsResult toolsList = mcpClient.listTools();
+			assertThat(toolsList.getTools()).hasSize(1);
+			assertThat(toolsList.getTools().get(0).getName()).isEqualTo("calculator");
 			// Note: outputSchema might be null in sync server, but validation still works
 
 			// Call tool with valid structured output
 			CallToolResult response = mcpClient
-				.callTool(new McpSchema.CallToolRequest("calculator", Map.of("expression", "2 + 3")));
+				.callTool(new McpSchema.CallToolRequest("calculator", Collections.singletonMap("expression", "2 + 3")));
 
 			assertThat(response).isNotNull();
-			assertThat(response.isError()).isTrue();
-			assertThat(response.content()).isNotEmpty();
-			assertThat(response.content())
+			assertThat(response.getIsError()).isTrue();
+			assertThat(response.getContent()).isNotEmpty();
+			assertThat(response.getContent())
 				.containsExactly(new McpSchema.TextContent("Error calling tool: Simulated in-handler error"));
-			assertThat(response.structuredContent()).isNull();
+			assertThat(response.getStructuredContent()).isNull();
 		}
 		finally {
 			mcpServer.closeGracefully();
@@ -464,12 +510,17 @@ public abstract class AbstractStatelessIntegrationTests {
 	@MethodSource("clientsForTesting")
 	void testStructuredOutputValidationFailure(String clientType) {
 
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
 		// Create a tool with output schema
-		Map<String, Object> outputSchema = Map.of("type", "object", "properties",
-				Map.of("result", Map.of("type", "number"), "operation", Map.of("type", "string")), "required",
-				List.of("result", "operation"));
+		Map<String, Object> properties = new HashMap<>();
+		properties.put("result", Collections.singletonMap("type", "number"));
+		properties.put("operation", Collections.singletonMap("type", "string"));
+
+		Map<String, Object> outputSchema = new HashMap<>();
+		outputSchema.put("type", "object");
+		outputSchema.put("properties", properties);
+		outputSchema.put("required", Arrays.asList("result", "operation"));
 
 		Tool calculatorTool = Tool.builder()
 			.name("calculator")
@@ -483,32 +534,35 @@ public abstract class AbstractStatelessIntegrationTests {
 			.callHandler((exchange, request) -> {
 				// Return invalid structured output. Result should be number, missing
 				// operation
+				Map<String, Object> structuredContent = new HashMap<>();
+				outputSchema.put("result", "not-a-number");
+				outputSchema.put("extra", "field");
 				return CallToolResult.builder()
 					.addTextContent("Invalid calculation")
-					.structuredContent(Map.of("result", "not-a-number", "extra", "field"))
+					.structuredContent(structuredContent)
 					.build();
 			})
 			.build();
 
-		var mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
+		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
 			.capabilities(ServerCapabilities.builder().tools(true).build())
 			.tools(tool)
 			.build();
 
-		try (var mcpClient = clientBuilder.build()) {
+		try (McpSyncClient mcpClient = clientBuilder.build()) {
 			InitializeResult initResult = mcpClient.initialize();
 			assertThat(initResult).isNotNull();
 
 			// Call tool with invalid structured output
 			CallToolResult response = mcpClient
-				.callTool(new McpSchema.CallToolRequest("calculator", Map.of("expression", "2 + 3")));
+				.callTool(new McpSchema.CallToolRequest("calculator", Collections.singletonMap("expression", "2 + 3")));
 
 			assertThat(response).isNotNull();
-			assertThat(response.isError()).isTrue();
-			assertThat(response.content()).hasSize(1);
-			assertThat(response.content().get(0)).isInstanceOf(McpSchema.TextContent.class);
+			assertThat(response.getIsError()).isTrue();
+			assertThat(response.getContent()).hasSize(1);
+			assertThat(response.getContent().get(0)).isInstanceOf(McpSchema.TextContent.class);
 
-			String errorMessage = ((McpSchema.TextContent) response.content().get(0)).text();
+			String errorMessage = ((McpSchema.TextContent) response.getContent().get(0)).getText();
 			assertThat(errorMessage).contains("Validation failed");
 		}
 		finally {
@@ -520,11 +574,21 @@ public abstract class AbstractStatelessIntegrationTests {
 	@MethodSource("clientsForTesting")
 	void testStructuredOutputMissingStructuredContent(String clientType) {
 
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
 		// Create a tool with output schema
-		Map<String, Object> outputSchema = Map.of("type", "object", "properties",
-				Map.of("result", Map.of("type", "number")), "required", List.of("result"));
+
+		// Create outputSchema in Java 8 style
+		Map<String, Object> resultProperty = new HashMap<>();
+		resultProperty.put("type", "number");
+
+		Map<String, Object> properties = new HashMap<>();
+		properties.put("result", resultProperty);
+
+		Map<String, Object> outputSchema = new HashMap<>();
+		outputSchema.put("type", "object");
+		outputSchema.put("properties", properties);
+		outputSchema.put("required", Arrays.asList("result"));
 
 		Tool calculatorTool = Tool.builder()
 			.name("calculator")
@@ -532,7 +596,7 @@ public abstract class AbstractStatelessIntegrationTests {
 			.outputSchema(outputSchema)
 			.build();
 
-		var tool = McpStatelessServerFeatures.SyncToolSpecification.builder()
+		SyncToolSpecification tool = McpStatelessServerFeatures.SyncToolSpecification.builder()
 			.tool(calculatorTool)
 			.callHandler((exchange, request) -> {
 				// Return result without structured content but tool has output schema
@@ -540,25 +604,25 @@ public abstract class AbstractStatelessIntegrationTests {
 			})
 			.build();
 
-		var mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
+		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
 			.capabilities(ServerCapabilities.builder().tools(true).build())
 			.tools(tool)
 			.build();
 
-		try (var mcpClient = clientBuilder.build()) {
+		try (McpSyncClient mcpClient = clientBuilder.build()) {
 			InitializeResult initResult = mcpClient.initialize();
 			assertThat(initResult).isNotNull();
 
 			// Call tool that should return structured content but doesn't
 			CallToolResult response = mcpClient
-				.callTool(new McpSchema.CallToolRequest("calculator", Map.of("expression", "2 + 3")));
+				.callTool(new McpSchema.CallToolRequest("calculator", Collections.singletonMap("expression", "2 + 3")));
 
 			assertThat(response).isNotNull();
-			assertThat(response.isError()).isTrue();
-			assertThat(response.content()).hasSize(1);
-			assertThat(response.content().get(0)).isInstanceOf(McpSchema.TextContent.class);
+			assertThat(response.getIsError()).isTrue();
+			assertThat(response.getContent()).hasSize(1);
+			assertThat(response.getContent().get(0)).isInstanceOf(McpSchema.TextContent.class);
 
-			String errorMessage = ((McpSchema.TextContent) response.content().get(0)).text();
+			String errorMessage = ((McpSchema.TextContent) response.getContent().get(0)).getText();
 			assertThat(errorMessage).isEqualTo(
 					"Response missing structured content which is expected when calling tool with non-empty outputSchema");
 		}
@@ -571,24 +635,37 @@ public abstract class AbstractStatelessIntegrationTests {
 	@MethodSource("clientsForTesting")
 	void testStructuredOutputRuntimeToolAddition(String clientType) {
 
-		var clientBuilder = clientBuilders.get(clientType);
+		SyncSpec clientBuilder = clientBuilders.get(clientType);
 
 		// Start server without tools
-		var mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
+		McpStatelessSyncServer mcpServer = prepareSyncServerBuilder().serverInfo("test-server", "1.0.0")
 			.capabilities(ServerCapabilities.builder().tools(true).build())
 			.build();
 
-		try (var mcpClient = clientBuilder.build()) {
+		try (McpSyncClient mcpClient = clientBuilder.build()) {
 			InitializeResult initResult = mcpClient.initialize();
 			assertThat(initResult).isNotNull();
 
 			// Initially no tools
-			assertThat(mcpClient.listTools().tools()).isEmpty();
+			assertThat(mcpClient.listTools().getTools()).isEmpty();
 
 			// Add tool with output schema at runtime
-			Map<String, Object> outputSchema = Map.of("type", "object", "properties",
-					Map.of("message", Map.of("type", "string"), "count", Map.of("type", "integer")), "required",
-					List.of("message", "count"));
+
+			// Create outputSchema in Java 8 style
+			Map<String, Object> messageProperty = new HashMap<>();
+			messageProperty.put("type", "string");
+
+			Map<String, Object> countProperty = new HashMap<>();
+			countProperty.put("type", "integer");
+
+			Map<String, Object> properties = new HashMap<>();
+			properties.put("message", messageProperty);
+			properties.put("count", countProperty);
+
+			Map<String, Object> outputSchema = new HashMap<>();
+			outputSchema.put("type", "object");
+			outputSchema.put("properties", properties);
+			outputSchema.put("required", Arrays.asList("message", "count"));
 
 			Tool dynamicTool = Tool.builder()
 				.name("dynamic-tool")
@@ -596,13 +673,18 @@ public abstract class AbstractStatelessIntegrationTests {
 				.outputSchema(outputSchema)
 				.build();
 
-			var toolSpec = McpStatelessServerFeatures.SyncToolSpecification.builder()
+			SyncToolSpecification toolSpec = McpStatelessServerFeatures.SyncToolSpecification.builder()
 				.tool(dynamicTool)
 				.callHandler((exchange, request) -> {
-					int count = (Integer) request.arguments().getOrDefault("count", 1);
+					int count = (Integer) request.getArguments().getOrDefault("count", 1);
+
+					Map<String, Object> structuredContent = new HashMap<>();
+					structuredContent.put("message", "Dynamic execution");
+					structuredContent.put("count", count);
+
 					return CallToolResult.builder()
 						.addTextContent("Dynamic tool executed " + count + " times")
-						.structuredContent(Map.of("message", "Dynamic execution", "count", count))
+						.structuredContent(structuredContent)
 						.build();
 				})
 				.build();
@@ -612,33 +694,32 @@ public abstract class AbstractStatelessIntegrationTests {
 
 			// Wait for tool list change notification
 			await().atMost(Duration.ofSeconds(5)).untilAsserted(() -> {
-				assertThat(mcpClient.listTools().tools()).hasSize(1);
+				assertThat(mcpClient.listTools().getTools()).hasSize(1);
 			});
 
 			// Verify tool was added with output schema
-			var toolsList = mcpClient.listTools();
-			assertThat(toolsList.tools()).hasSize(1);
-			assertThat(toolsList.tools().get(0).name()).isEqualTo("dynamic-tool");
+			ListToolsResult toolsList = mcpClient.listTools();
+			assertThat(toolsList.getTools()).hasSize(1);
+			assertThat(toolsList.getTools().get(0).getName()).isEqualTo("dynamic-tool");
 			// Note: outputSchema might be null in sync server, but validation still works
 
 			// Call dynamically added tool
 			CallToolResult response = mcpClient
-				.callTool(new McpSchema.CallToolRequest("dynamic-tool", Map.of("count", 3)));
+				.callTool(new McpSchema.CallToolRequest("dynamic-tool", Collections.singletonMap("count", 3)));
 
 			assertThat(response).isNotNull();
-			assertThat(response.isError()).isFalse();
+			assertThat(response.getIsError()).isFalse();
 
-			assertThat(response.content()).hasSize(1);
-			assertThat(response.content().get(0)).isInstanceOf(McpSchema.TextContent.class);
-			assertThat(((McpSchema.TextContent) response.content().get(0)).text())
+			assertThat(response.getContent()).hasSize(1);
+			assertThat(response.getContent().get(0)).isInstanceOf(McpSchema.TextContent.class);
+			assertThat(((McpSchema.TextContent) response.getContent().get(0)).getText())
 				.isEqualTo("Dynamic tool executed 3 times");
 
-			assertThat(response.structuredContent()).isNotNull();
-			assertThatJson(response.structuredContent()).when(Option.IGNORING_ARRAY_ORDER)
+			assertThat(response.getStructuredContent()).isNotNull();
+			assertThatJson(response.getStructuredContent()).when(Option.IGNORING_ARRAY_ORDER)
 				.when(Option.IGNORING_EXTRA_ARRAY_ITEMS)
 				.isObject()
-				.isEqualTo(json("""
-						{"count":3,"message":"Dynamic execution"}"""));
+				.isEqualTo(json("{\"count\":3,\"message\":\"Dynamic execution\"}"));
 		}
 		finally {
 			mcpServer.closeGracefully();
@@ -647,13 +728,18 @@ public abstract class AbstractStatelessIntegrationTests {
 
 	private double evaluateExpression(String expression) {
 		// Simple expression evaluator for testing
-		return switch (expression) {
-			case "2 + 3" -> 5.0;
-			case "10 * 2" -> 20.0;
-			case "7 + 8" -> 15.0;
-			case "5 + 3" -> 8.0;
-			default -> 0.0;
-		};
+		switch (expression) {
+			case "2 + 3":
+				return 5.0;
+			case "10 * 2":
+				return 20.0;
+			case "7 + 8":
+				return 15.0;
+			case "5 + 3":
+				return 8.0;
+			default:
+				return 0.0;
+		}
 	}
 
 }
